[package]
name = "hello_stm32"
version = "0.1.0"
authors = ["yukihir0 <yukihiro.cotori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
embedded-hal = "0.2.4"
stm32f4xx-hal = {version="0.7.0", features=["stm32f407"]}

